--- a/angular.json
+++ b/angular.json
@@ -25,7 +25,9 @@
               "apps/lifeweb/src/favicon.ico",
               "apps/lifeweb/src/assets"
             ],
-            "styles": ["apps/lifeweb/src/styles.scss"],
+            "styles": [
+              "apps/lifeweb/src/styles.scss"
+            ],
             "scripts": []
           },
           "configurations": {
@@ -83,7 +85,10 @@
               "apps/lifeweb/tsconfig.app.json",
               "apps/lifeweb/tsconfig.spec.json"
             ],
-            "exclude": ["**/node_modules/**", "!apps/lifeweb/**/*"]
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/lifeweb/**/*"
+            ]
           }
         },
         "test": {
@@ -94,6 +99,10 @@
             "passWithNoTests": true,
             "setupFile": "apps/lifeweb/src/test-setup.ts"
           }
+        },
+        "deploy": {
+          "builder": "@angular/fire:deploy",
+          "options": {}
         }
       }
     },
@@ -118,8 +127,73 @@
         "lint": {
           "builder": "@angular-devkit/build-angular:tslint",
           "options": {
-            "tsConfig": ["apps/lifeweb-e2e/tsconfig.e2e.json"],
-            "exclude": ["**/node_modules/**", "!apps/lifeweb-e2e/**/*"]
+            "tsConfig": [
+              "apps/lifeweb-e2e/tsconfig.e2e.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/lifeweb-e2e/**/*"
+            ]
+          }
+        }
+      }
+    },
+    "firebase-functions": {
+      "root": "apps/firebase-functions",
+      "sourceRoot": "apps/firebase-functions/src",
+      "projectType": "application",
+      "prefix": "firebase-functions",
+      "schematics": {},
+      "architect": {
+        "build": {
+          "builder": "@nrwl/node:build",
+          "options": {
+            "outputPath": "dist/apps/firebase-functions",
+            "main": "apps/firebase-functions/src/main.ts",
+            "tsConfig": "apps/firebase-functions/tsconfig.app.json",
+            "assets": [
+              "apps/firebase-functions/src/assets"
+            ]
+          },
+          "configurations": {
+            "production": {
+              "optimization": true,
+              "extractLicenses": true,
+              "inspect": false,
+              "fileReplacements": [
+                {
+                  "replace": "apps/firebase-functions/src/environments/environment.ts",
+                  "with": "apps/firebase-functions/src/environments/environment.prod.ts"
+                }
+              ]
+            }
+          }
+        },
+        "serve": {
+          "builder": "@nrwl/node:execute",
+          "options": {
+            "buildTarget": "firebase-functions:build"
+          }
+        },
+        "lint": {
+          "builder": "@angular-devkit/build-angular:tslint",
+          "options": {
+            "tsConfig": [
+              "apps/firebase-functions/tsconfig.app.json",
+              "apps/firebase-functions/tsconfig.spec.json"
+            ],
+            "exclude": [
+              "**/node_modules/**",
+              "!apps/firebase-functions/**/*"
+            ]
+          }
+        },
+        "test": {
+          "builder": "@nrwl/jest:jest",
+          "options": {
+            "jestConfig": "apps/firebase-functions/jest.config.js",
+            "tsConfig": "apps/firebase-functions/tsconfig.spec.json",
+            "passWithNoTests": true
           }
         }
       }
