--- a/package.json
+++ b/package.json
@@ -11,6 +11,9 @@
     "test": "ng test",
     "lint": "nx workspace-lint && ng lint",
     "e2e": "ng e2e",
+    "firebase:serve": "concurrently --kill-others \"yarn run build firebase-functions --watch\" \"firebase serve --only functions\"",
+    "firebase:shell": "concurrently --kill-others \"yarn run build firebase-functions --watch\" \"firebase firebase-functions:shell\" --raw",
+    "firebase:deploy": "firebase deploy",
     "affected:apps": "nx affected:apps",
     "affected:libs": "nx affected:libs",
     "affected:build": "nx affected:build",
@@ -29,39 +32,52 @@
   },
   "private": true,
   "dependencies": {
-    "@nrwl/angular": "10.0.12",
     "@angular/animations": "^10.0.0",
     "@angular/common": "^10.0.0",
     "@angular/compiler": "^10.0.0",
     "@angular/core": "^10.0.0",
+    "@angular/fire": "^6.0.2",
     "@angular/forms": "^10.0.0",
     "@angular/platform-browser": "^10.0.0",
     "@angular/platform-browser-dynamic": "^10.0.0",
     "@angular/router": "^10.0.0",
+    "@nrwl/angular": "10.0.12",
+    "firebase": "^7.18.0",
+    "firebase-admin": "^9.1.0",
+    "firebase-functions": "^3.9.1",
     "rxjs": "~6.5.5",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/build-angular": "~0.1000.0",
     "@angular/cli": "~10.0.0",
-    "@nrwl/workspace": "10.0.12",
-    "@types/node": "~8.9.4",
-    "dotenv": "6.2.0",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "eslint": "6.8.0",
-    "typescript": "~3.9.3",
-    "prettier": "2.0.4",
-    "@nrwl/nx-cloud": "latest",
     "@angular/compiler-cli": "^10.0.0",
     "@angular/language-service": "^10.0.0",
-    "@angular-devkit/build-angular": "~0.1000.0",
-    "codelyzer": "~5.0.1",
-    "jest-preset-angular": "8.1.2",
+    "@nrwl/cypress": "10.0.12",
     "@nrwl/jest": "10.0.12",
-    "jest": "25.2.3",
+    "@nrwl/node": "10.0.12",
+    "@nrwl/nx-cloud": "latest",
+    "@nrwl/workspace": "10.0.12",
     "@types/jest": "25.1.4",
-    "ts-jest": "25.2.1",
+    "@types/node": "~8.9.4",
+    "codelyzer": "~5.0.1",
+    "concurrently": "^5.3.0",
     "cypress": "^4.1.0",
-    "@nrwl/cypress": "10.0.12"
-  }
+    "dotenv": "6.2.0",
+    "eslint": "6.8.0",
+    "jest": "25.2.3",
+    "jest-preset-angular": "8.1.2",
+    "prettier": "2.0.4",
+    "ts-jest": "25.2.1",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.0.0",
+    "typescript": "~3.9.3",
+    "@angular-devkit/architect": ">= 0.900 < 0.1100",
+    "firebase-tools": "^8.0.0",
+    "fuzzy": "^0.1.3",
+    "inquirer": "^6.2.2",
+    "inquirer-autocomplete-prompt": "^1.0.1",
+    "open": "^7.0.3"
+  },
+  "main": "dist/apps/firebase-functions/main.js"
 }
