--- a/angular.json
+++ b/angular.json
@@ -26,7 +26,10 @@
               "apps/lifeweb/src/assets"
             ],
             "styles": [
-              "apps/lifeweb/src/styles.scss"
+              "apps/lifeweb/src/styles.scss",
+              "node_modules/primeng/resources/themes/nova/theme.css",
+              "node_modules/primeng/resources/primeng.min.css",
+              "node_modules/primeicons/primeicons.css"
             ],
             "scripts": []
           },
