--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^10.0.0",
+    "@angular/cdk": "^10.1.3",
     "@angular/common": "^10.0.0",
     "@angular/compiler": "^10.0.0",
     "@angular/core": "^10.0.0",
@@ -41,14 +42,20 @@
     "@angular/platform-browser": "^10.0.0",
     "@angular/platform-browser-dynamic": "^10.0.0",
     "@angular/router": "^10.0.0",
+    "@fullcalendar/core": "^5.3.0",
     "@nrwl/angular": "10.0.12",
+    "chart.js": "^2.9.3",
     "firebase": "^7.18.0",
     "firebase-admin": "^9.1.0",
     "firebase-functions": "^3.9.1",
+    "primeicons": "^4.0.0",
+    "primeng": "^10.0.0-rc.3",
+    "quill": "^1.3.7",
     "rxjs": "~6.5.5",
     "zone.js": "^0.10.2"
   },
   "devDependencies": {
+    "@angular-devkit/architect": ">= 0.900 < 0.1100",
     "@angular-devkit/build-angular": "~0.1000.0",
     "@angular/cli": "~10.0.0",
     "@angular/compiler-cli": "^10.0.0",
@@ -65,19 +72,18 @@
     "cypress": "^4.1.0",
     "dotenv": "6.2.0",
     "eslint": "6.8.0",
-    "jest": "25.2.3",
-    "jest-preset-angular": "8.1.2",
-    "prettier": "2.0.4",
-    "ts-jest": "25.2.1",
-    "ts-node": "~7.0.0",
-    "tslint": "~6.0.0",
-    "typescript": "~3.9.3",
-    "@angular-devkit/architect": ">= 0.900 < 0.1100",
     "firebase-tools": "^8.0.0",
     "fuzzy": "^0.1.3",
     "inquirer": "^6.2.2",
     "inquirer-autocomplete-prompt": "^1.0.1",
-    "open": "^7.0.3"
+    "jest": "25.2.3",
+    "jest-preset-angular": "8.1.2",
+    "open": "^7.0.3",
+    "prettier": "2.0.4",
+    "ts-jest": "25.2.1",
+    "ts-node": "~7.0.0",
+    "tslint": "~6.0.0",
+    "typescript": "~3.9.3"
   },
   "main": "dist/apps/firebase-functions/main.js"
 }
