--- a/.firebaserc
+++ b/.firebaserc
@@ -9,6 +9,13 @@
           "evodlife"
         ]
       }
+    },
+    "yesmomiapp": {
+      "hosting": {
+        "lifeweb": [
+          "yesmomiapp"
+        ]
+      }
     }
   }
 }
