--- a/angular.json
+++ b/angular.json
@@ -43,7 +43,9 @@
               "node_modules/quill/dist/quill.snow.css",
               "apps/lifeweb/src/styles.scss"
             ],
-            "scripts": ["node_modules/quill/dist/quill.js"]
+            "scripts": [
+              "node_modules/quill/dist/quill.js"
+            ]
           },
           "configurations": {
             "production": {
